fix style on mobile

--- a/web/src/components/components.module.css
+++ b/web/src/components/components.module.css
@@ -71,6 +71,7 @@
   margin: 0 5px;
   border: 2px solid rgb(255 255 255 / 28%);
   box-shadow: 0 0 12px 0px rgba(0, 0, 0, 0.259);
+  z-index: 10;
 }
 
 .panel .choosen .dialog .kong {
