--- a/web/src/pages/pages.module.css
+++ b/web/src/pages/pages.module.css
@@ -5,7 +5,7 @@
   max-height: 600px;
   background-color: #1f422d;
   max-width: 1000px;
-  min-width: 800px;
+  min-width: 750px;
   margin: 0 auto;
   position: relative;
 }
@@ -13,7 +13,7 @@
 .discarded {
   flex: 1;
   padding: 0 10px;
-  width: 60%;
+  width: 80%;
   margin: 0 auto;
 }
 
